changements pour deploiement

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         const batsource = new itowns.FileSource({
-            url: './paris_centre.geojson',
+            url: './donnees/paris_centre.geojson',
             crs: 'EPSG:2154',
             format: 'application/json',
         });
