--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vector data in 3D</title>
+    <title>Paris centre BDNB </title>
     <style>
         html {
             height: 100%;
@@ -77,7 +77,7 @@
                 <label for="PeriodeConstruction">Période Construction</label>
                 <input type="radio" id="PeriodeConstruction" name="layer" value=1 checked>
 
-                <label for="DPEEnergy">DPE Energy</label>
+                <label for="DPEEnergy">DPE Energie</label>
                 <input type="radio" id="DPEEnergy" name="layer" value=2>
 
                 <label for="DPEGES">DPE GES</label>
@@ -103,7 +103,7 @@
         <div id="hidden" hidden>
 
             <div id="dateConstruction">
-                <h3> Legend </h3>
+                <h3> Période de Construction </h3>
                 <br>
                 <span class="dot" style="background-color:#f7fcf5;"></span>
                 <p> avant 1948 </p> <br>
@@ -123,7 +123,7 @@
 
 
             <div id="dpeEnergy">
-                <h3> Legend </h3>
+                <h3> DPE Energie </h3>
                 <br>
                 <span class="dot" style="background-color:#009735;"></span>
                 <p> A </p> <br>
@@ -137,7 +137,7 @@
                 <p> E </p> <br>
                 <span class="dot" style="background-color:#fa7108;"></span>
                 <p> F </p> <br>
-                <span class="dot" style="background-color:#277a3e;"></span>
+                <span class="dot" style="background-color:#ff0000;"></span>
                 <p> G</p> <br>
                 <span class="dot" style="background-color:#aaaaaa;"></span>
                 <p> no data</p> <br>
@@ -145,7 +145,7 @@
 
 
             <div id="dpeGES">
-                <h3> Legend </h3>
+                <h3> DPE GES </h3>
                 <br>
                 <span class="dot" style="background-color:#f0eef6;"></span>
                 <p> A </p> <br>
@@ -166,7 +166,7 @@
             </div>
 
             <div id="dateDPE">
-                <h3> Legend </h3>
+                <h3> Date Notation GPE </h3>
                 <br>
                 <span class="dot" style="background-color:#f0eef6;"></span>
                 <p> 2011 </p> <br>
@@ -193,35 +193,35 @@
             </div>
 
             <div id="consoTotalGas">
-                <h3> Legend </h3>
+                <h3> Consommation totale de Gaz en 2020</h3>
                 <br>
                 <span class="dot" style="background-color:#ffe3e3;"></span>
-                <p> 0 - 55000 litres </p> <br>
+                <p> 0 - 55000 litres/an </p> <br>
                 <span class="dot" style="background-color:#ffaaaa;"></span>
-                <p> 55001 - 200000 litres</p> <br>
+                <p> 55001 - 200000 litres/an</p> <br>
                 <span class="dot" style="background-color:#ff8e8e;"></span>
-                <p> 200001 - 450000 litres </p> <br>
+                <p> 200001 - 450000 litres/an </p> <br>
                 <span class="dot" style="background-color:#ff5555;"></span>
-                <p> 450001 - 1000000 litres </p> <br>
+                <p> 450001 - 1000000 litres/an </p> <br>
                 <span class="dot" style="background-color:#ff0000;"></span>
-                <p> 1000001 - 10000001 litres</p> <br>
+                <p> 1000001 - 10000001 litres/an</p> <br>
                 <span class="dot" style="background-color:#aaaaaa;"></span>
                 <p> no data</p> <br>
             </div>
 
             <div id="consoTotalEnergy">
-                <h3> Legend </h3>
+                <h3> Consommation totale kW/an en 2020 </h3>
                 <br>
                 <span class="dot" style="background-color:#ffe3e3;"></span>
-                <p> 0 - 65000 kw/an </p> <br>
+                <p> 0 - 65000 kW/an </p> <br>
                 <span class="dot" style="background-color:#ffaaaa;"></span>
-                <p> 65001 - 200000 kw/an</p> <br>
+                <p> 65001 - 200000 kW/an</p> <br>
                 <span class="dot" style="background-color:#ff8e8e;"></span>
-                <p> 200001 - 450000 kw/an </p> <br>
+                <p> 200001 - 450000 kW/an </p> <br>
                 <span class="dot" style="background-color:#ff5555;"></span>
-                <p> 450001 - 900000 kw/an </p> <br>
+                <p> 450001 - 900000 kW/an </p> <br>
                 <span class="dot" style="background-color:#ff0000;"></span>
-                <p> 900001 - 10000000 kw/an</p> <br>
+                <p> 900001 - 10000000 kW/an</p> <br>
                 <span class="dot" style="background-color:#aaaaaa;"></span>
                 <p> no data</p> <br>
             </div>
