--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Vector data in 3D</title>
+    <title>Paris centre BDNB </title>
     <style>
         html {
             height: 100%
@@ -73,7 +73,7 @@
     <div id="all">
         <div id="form">
             <form id="buttons"> <label for="PeriodeConstruction">Période Construction</label> <input type="radio"
-                    id="PeriodeConstruction" name="layer" value="1" checked> <label for="DPEEnergy">DPE Energy</label>
+                    id="PeriodeConstruction" name="layer" value="1" checked> <label for="DPEEnergy">DPE Energie</label>
                 <input type="radio" id="DPEEnergy" name="layer" value="2"> <label for="DPEGES">DPE GES</label> <input
                     type="radio" id="DPEGES" name="layer" value="3"> <label for="DateNotationDPE">Date Notation
                     DPE</label> <input type="radio" id="DateNotationDPE" name="layer" value="4"> <br> <label
@@ -84,7 +84,7 @@
         <div id="Legend"> </div>
         <div id="hidden" hidden>
             <div id="dateConstruction">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#f7fcf5"></span>
+                <h3> Période de Construction </h3> <br> <span class="dot" style="background-color:#f7fcf5"></span>
                 <p> avant 1948 </p> <br> <span class="dot" style="background-color:#e2f4dd"></span>
                 <p> 1949-1970 </p> <br> <span class="dot" style="background-color:#e2f4dd"></span>
                 <p> 1970-1988 </p> <br> <span class="dot" style="background-color:#94d390"></span>
@@ -94,18 +94,18 @@
                 <p> >2012</p> <br>
             </div>
             <div id="dpeEnergy">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#009735"></span>
+                <h3> DPE Energie </h3> <br> <span class="dot" style="background-color:#009735"></span>
                 <p> A </p> <br> <span class="dot" style="background-color:#00ff59"></span>
                 <p> B </p> <br> <span class="dot" style="background-color:#a8fa2d"></span>
                 <p> C </p> <br> <span class="dot" style="background-color:#f3fa25"></span>
                 <p> D </p> <br> <span class="dot" style="background-color:#fab91f"></span>
                 <p> E </p> <br> <span class="dot" style="background-color:#fa7108"></span>
-                <p> F </p> <br> <span class="dot" style="background-color:#277a3e"></span>
+                <p> F </p> <br> <span class="dot" style="background-color:red"></span>
                 <p> G</p> <br> <span class="dot" style="background-color:#aaa"></span>
                 <p> no data</p> <br>
             </div>
             <div id="dpeGES">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#f0eef6"></span>
+                <h3> DPE GES </h3> <br> <span class="dot" style="background-color:#f0eef6"></span>
                 <p> A </p> <br> <span class="dot" style="background-color:#dcdcec"></span>
                 <p> B </p> <br> <span class="dot" style="background-color:#c0c1de"></span>
                 <p> C </p> <br> <span class="dot" style="background-color:#a3a0cb"></span>
@@ -116,7 +116,7 @@
                 <p> no data</p> <br>
             </div>
             <div id="dateDPE">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#f0eef6"></span>
+                <h3> Date Notation GPE </h3> <br> <span class="dot" style="background-color:#f0eef6"></span>
                 <p> 2011 </p> <br> <span class="dot" style="background-color:#dcdcec"></span>
                 <p> 2012 </p> <br> <span class="dot" style="background-color:#c0c1de"></span>
                 <p> 2013 </p> <br> <span class="dot" style="background-color:#f7fbff"></span>
@@ -130,21 +130,23 @@
                 <p> no data</p> <br>
             </div>
             <div id="consoTotalGas">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#ffe3e3"></span>
-                <p> 0 - 55000 litres </p> <br> <span class="dot" style="background-color:#faa"></span>
-                <p> 55001 - 200000 litres</p> <br> <span class="dot" style="background-color:#ff8e8e"></span>
-                <p> 200001 - 450000 litres </p> <br> <span class="dot" style="background-color:#f55"></span>
-                <p> 450001 - 1000000 litres </p> <br> <span class="dot" style="background-color:red"></span>
-                <p> 1000001 - 10000001 litres</p> <br> <span class="dot" style="background-color:#aaa"></span>
+                <h3> Consommation totale de Gaz en 2020</h3> <br> <span class="dot"
+                    style="background-color:#ffe3e3"></span>
+                <p> 0 - 55000 litres/an </p> <br> <span class="dot" style="background-color:#faa"></span>
+                <p> 55001 - 200000 litres/an</p> <br> <span class="dot" style="background-color:#ff8e8e"></span>
+                <p> 200001 - 450000 litres/an </p> <br> <span class="dot" style="background-color:#f55"></span>
+                <p> 450001 - 1000000 litres/an </p> <br> <span class="dot" style="background-color:red"></span>
+                <p> 1000001 - 10000001 litres/an</p> <br> <span class="dot" style="background-color:#aaa"></span>
                 <p> no data</p> <br>
             </div>
             <div id="consoTotalEnergy">
-                <h3> Legend </h3> <br> <span class="dot" style="background-color:#ffe3e3"></span>
-                <p> 0 - 65000 kw/an </p> <br> <span class="dot" style="background-color:#faa"></span>
-                <p> 65001 - 200000 kw/an</p> <br> <span class="dot" style="background-color:#ff8e8e"></span>
-                <p> 200001 - 450000 kw/an </p> <br> <span class="dot" style="background-color:#f55"></span>
-                <p> 450001 - 900000 kw/an </p> <br> <span class="dot" style="background-color:red"></span>
-                <p> 900001 - 10000000 kw/an</p> <br> <span class="dot" style="background-color:#aaa"></span>
+                <h3> Consommation totale kW/an en 2020 </h3> <br> <span class="dot"
+                    style="background-color:#ffe3e3"></span>
+                <p> 0 - 65000 kW/an </p> <br> <span class="dot" style="background-color:#faa"></span>
+                <p> 65001 - 200000 kW/an</p> <br> <span class="dot" style="background-color:#ff8e8e"></span>
+                <p> 200001 - 450000 kW/an </p> <br> <span class="dot" style="background-color:#f55"></span>
+                <p> 450001 - 900000 kW/an </p> <br> <span class="dot" style="background-color:red"></span>
+                <p> 900001 - 10000000 kW/an</p> <br> <span class="dot" style="background-color:#aaa"></span>
                 <p> no data</p> <br>
             </div>
         </div>
